// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Footer should render the actions and the dropdown accordingly 1`] = `
<div
  className="HvActions-actionContainer-2"
>
  <HvButton
    category="ghost"
    className="HvActions-button-1"
    id="footer1-0-action-view"
    key="footer1-0-action-view"
    onClick={[Function]}
  >
    View
  </HvButton>
  <WithStyles(DropDownMenu)
    aria-label="footer1-more-actions"
    classes={
      Object {
        "root": "HvActions-dropDownMenu-3",
      }
    }
    dataList={
      Array [
        Object {
          "icon": undefined,
          "iconCallback": undefined,
          "id": "delete",
          "label": "Delete",
        },
        Object {
          "disabled": true,
          "icon": undefined,
          "iconCallback": undefined,
          "id": "update",
          "label": "Update",
        },
      ]
    }
    disablePortal={false}
    icon={
      <WithStyles(MoreOptionsVertical)
        className="HvActions-dropDownMenuIcon-4"
      />
    }
    keepOpened={false}
    onClick={[Function]}
    placement="left"
  />
</div>
`;

exports[`Footer should render the actions and the dropdown accordingly 2`] = `
<div
  className="HvActions-actionContainer-2"
>
  <WithStyles(DropDownMenu)
    aria-label="footer2-more-actions"
    classes={
      Object {
        "root": "HvActions-dropDownMenu-3",
      }
    }
    dataList={
      Array [
        Object {
          "icon": undefined,
          "iconCallback": undefined,
          "id": "view",
          "label": "View",
        },
        Object {
          "icon": undefined,
          "iconCallback": undefined,
          "id": "delete",
          "label": "Delete",
        },
        Object {
          "disabled": true,
          "icon": undefined,
          "iconCallback": undefined,
          "id": "update",
          "label": "Update",
        },
      ]
    }
    disablePortal={false}
    icon={
      <WithStyles(MoreOptionsVertical)
        className="HvActions-dropDownMenuIcon-4"
      />
    }
    keepOpened={false}
    onClick={[Function]}
    placement="left"
  />
</div>
`;

exports[`Footer should render the actions and the dropdown accordingly 3`] = `
<div
  className="HvActions-actionContainer-2"
>
  <HvButton
    category="ghost"
    className="HvActions-button-1"
    id="footer3-0-action-view"
    key="footer3-0-action-view"
    onClick={[Function]}
  >
    View
  </HvButton>
  <HvButton
    category="ghost"
    className="HvActions-button-1"
    id="footer3-1-action-delete"
    key="footer3-1-action-delete"
    onClick={[Function]}
  >
    Delete
  </HvButton>
  <WithStyles(DropDownMenu)
    aria-label="footer3-more-actions"
    classes={
      Object {
        "root": "HvActions-dropDownMenu-3",
      }
    }
    dataList={
      Array [
        Object {
          "disabled": true,
          "icon": undefined,
          "iconCallback": undefined,
          "id": "update",
          "label": "Update",
        },
      ]
    }
    disablePortal={false}
    icon={
      <WithStyles(MoreOptionsVertical)
        className="HvActions-dropDownMenuIcon-4"
      />
    }
    keepOpened={false}
    onClick={[Function]}
    placement="left"
  />
</div>
`;
